--- a/style.css
+++ b/style.css
@@ -850,12 +850,20 @@ flex-direction: column;
     background-color: #1D9F64;
     color: #fff;
 }
+.buybtn:hover{
+    background-color: #fff;
+    color: #1D9F64;
+}
 .addtocartbtn{
     width: 300px;
     height: 50px;
     border: 1px solid var(--main-color);
     border-radius: 30px;
     color: #23704D;
+}
+.addtocartbtn:hover{
+    background-color: #1D9F64;
+    color: #fff;
 }
 .addtocartbtn img{
     vertical-align: middle;
