--- a/style.css
+++ b/style.css
@@ -3,21 +3,29 @@ margin: 0;
 padding: 0;
 list-style: none;
 font-family: Arial, Helvetica, sans-serif; 
+box-sizing: border-box;
 }
-
+* a{
+    text-decoration: none;
+}
 :root{
 --main-color: #23704D;
 --side-color:#A1C3AD;
 }
 body{
     background:url(./picture/brick-wall.png)
+    
 }
 .container-large{
     max-width: 1920px;
+    position: relative;
 }
 .cantainer-h2{
     max-width: 1200px;
     margin: auto;
+}
+.main{
+    min-height: calc(100vh - 80px - 44px - 230px);
 }
 h1{
 color: var(--main-color);
@@ -195,11 +203,18 @@ p{
     .icon svg{
             fill:#fff
         }
+    .menu li:nth-child(2){
+        position: relative;
+    }
     .menu .submenu {
         display: none;
         width: 100%;
-        padding: 0.8em 2em;
+        position: absolute;
+        top:0;
+        right: 100%;
         z-index: 99;
+        background-color: #A1C3AD;
+        text-align: center;
     }
     .menu input[type="checkbox"]:checked ~ .submenu {
         display: flex;
@@ -217,7 +232,7 @@ p{
     min-width: 5em;
     position: absolute;
     top: 100%;
-    left: 0;
+    left:0;
     background-color: #A1C3AD;
     z-index: 100;
     }
@@ -233,7 +248,7 @@ p{
     flex-wrap: wrap;
     font-size: 16px;
     padding: 10px;
-    padding-top: 90px;
+    margin-top: 80px;
     color: #23704D;
     position: relative;
 }
@@ -256,6 +271,13 @@ p{
 }
 .breadcrumb li:last-child::after{
     content:"";
+}
+@media screen and(max-width:767px) {
+   .breadcrumb{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   }
 }
 /* breadcrumb-end */
 /* bannersection */
@@ -533,7 +555,6 @@ p{
     flex-direction: column;
     line-height: 1.6;
     padding: 10px;
-    height: 100%;
 }
 .knowledge-card p{
     padding-top: 10px;
@@ -587,7 +608,8 @@ p{
     display: flex;
     justify-content: space-around;
     padding: 20px;
-    margin-top: 30px;
+    margin-top:30px;
+    
 }
 .footer-container p{
     color: #23704D;
@@ -765,7 +787,6 @@ p{
 /* product-listpage-start */
 .product-list-card {
     margin-bottom: 30px;
-    height: 100%;
 }
 .product-list-card a{
     text-decoration: none;
@@ -867,7 +888,7 @@ p{
     line-height: 1.5;
 }
 .article{
-    line-height: 2.5;
+    line-height: 2;
 }
 .article-pic{
     width:100%;
@@ -886,14 +907,31 @@ p{
 .article a{
     color: #225dac;
 }
+@media screen and (max-width:767px) {
+    .article h1{
+        font-size: 32px;
+    }
+    .article h2{
+        font-size: 28px;
+    }
+    .article p{
+        font-size: 16px;
+    }
+}
+article p{
+
+}
 /* article-end */
 /* productpage */
 .productpage-first-section{
-
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
 }
 .productimg{
-    width: 50%;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: stretch;
 }
 .large-img{
     width: 75%;
@@ -1034,7 +1072,8 @@ color: #23704D;
 .cart{
     max-width: 1200px;
     margin: auto;
-    padding-top: 100px;
+    padding-top: 110px;
+    flex: 1;
 }
 .cart h1{
     text-align: center;
@@ -1134,6 +1173,7 @@ color: #23704D;
     border: 0px;
     width: 50px;
     cursor: pointer;
+    background-color: transparent;
 }
 .cart-summary{
     border: 1px solid #000;
@@ -1146,6 +1186,7 @@ color: #23704D;
 
 .checkout-btn{
     border: 1px solid #ccc;
+    width: 100%;
     background-color: #1D9F64;
     color: #fff;
     cursor: pointer;
