--- a/style.css
+++ b/style.css
@@ -1174,7 +1174,6 @@ color: #23704D;
 }
 .cart-summary{
     border: 1px solid #000;
-    
     padding: 10px;
     line-height: 2.5;
     display: flex;
@@ -1213,3 +1212,102 @@ color: #23704D;
     }
 }
 /* catr-list-end */
+/* login-page */
+.login-page{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 20px;
+}
+.login-box{
+    width: 500px;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 20px;
+    padding: 20px;
+}
+.login{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: auto;
+}
+#email {
+    width: 200px;
+    height: 30px;
+}
+#password{
+    width: 200px;
+    height: 30px;
+}
+.login-btns{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 10px;
+}
+.login-btn{
+    width: 400px;
+    height: 40px;
+}
+.gmail-login-btn{
+    width: 400px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.facebook-login-btn{
+    width: 400px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+@media screen and (max-width:767px) {
+    .login-page{
+        margin-top: 80px;
+    }
+    .login-box{
+    width: 300px;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 20px;
+    padding: 20px;
+}
+#email {
+    width: 200px;
+    height: 30pX;
+}
+#password{
+    width: 200px;
+    height: 30pX;
+}
+.login-btn{
+    width: 200px;
+    height: 40px;
+}
+.gmail-login-btn{
+    width: 200px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.facebook-login-btn{
+    width: 200px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+}
