--- a/style.css
+++ b/style.css
@@ -1193,6 +1193,8 @@ p {
     display: flex;
     gap: 10px;
     align-items: center;
+    justify-content: center;
+    padding-top: 10px;
 }
 
 .quantity-wrapper span {
@@ -1228,6 +1230,8 @@ p {
 .btns {
     display: flex;
     gap: 20px;
+    margin: auto;
+    padding-top: 10px;
 }
 
 .buybtn {
