login btn color change

--- a/style.css
+++ b/style.css
@@ -1591,8 +1591,8 @@ p {
 .login-btn {
     width: 400px;
     height: 40px;
-    border: 0.5px solid #fff;
-    background-color: #ece6e6;
+    border: 0.5px solid #aaa;
+    background-color: #ddd;
     border-radius: 30px;
     
 }
@@ -1603,8 +1603,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.5px solid #fff;
-    background-color: #ece6e6;
+    border: 0.5px solid #aaa;
+    background-color: #ddd;
     border-radius: 30px;
     
 
@@ -1616,8 +1616,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.5px solid #fff;
-    background-color: #ece6e6;
+    border: 0.5px solid #aaa;
+    background-color: #ddd;
     border-radius: 30px;
     
 
