調整商品頁按鈕位置

--- a/style.css
+++ b/style.css
@@ -1284,7 +1284,7 @@ p {
     .btns {
         display: flex;
         flex-direction: column;
-        align-items: anchor-center;
+        align-items: center;
 
     }
 
