--- a/style.css
+++ b/style.css
@@ -637,7 +637,10 @@ p {
     }
 
     div.content {
+        display: flex;
+        flex-direction: column;
         text-align: center;
+        align-items: center;
     }
 }
 
